syntax = 'proto3';

package book;

//生成go文件的包路径
option go_package = '/pb';

message Price {
  int64 market_price = 1;  // 建议使用下划线的命名方式
  float sale_price = 2;
}